--- a/assets/index.html
+++ b/assets/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Lauchner</title>
+    <title>Launcher</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
