--- a/assets/index.html
+++ b/assets/index.html
@@ -4,22 +4,13 @@
     <meta charset="UTF-8">
     <title>Launcher</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="fonts/fontawesome/css/all.min.css">
 </head>
 <body>
 
     <div class="main">
         <input autofocus>
-        <ul>
-            <!-- <li class="aktiv">
-                <div class="img">
-                    <img src="img/reboot.svg">
-                </div>
-                <div class="text">
-                    <h1>0</h1>
-                    <p>Computer neu starten</p>
-                </div>
-            </li> -->
-        </ul>
+        <ul> </ul>
     </div>
     <script>window.$ = window.jQuery = require('./js/jquery.min.js');</script>
 
