update design, bug fix

--- a/assets/index.html
+++ b/assets/index.html
@@ -8,9 +8,15 @@
 </head>
 <body>
 
+
     <div class="main">
-        <input autofocus>
-        <ul> </ul>
+        <header>
+            <div class="title">Launcher</div>
+            <div class="img"><img src="./img/logo.png"></div>
+            <div class="link"><a class="settings">Einstellungen</a></div>
+        </header>
+        <input autofocus placeholder="Zur Suche Text hier eingeben">
+        <ul></ul>
     </div>
     <script>window.$ = window.jQuery = require('./js/jquery.min.js');</script>
 
