--- a/assets/index.html
+++ b/assets/index.html
@@ -12,7 +12,7 @@
     <div class="main">
         <header>
             <div class="title">Launcher</div>
-            <div class="img"><img src="./img/logo.png"></div>
+            <div class="img"><img class="" src="./img/logo.png"></div>
             <div class="link"><a class="settings">Einstellungen</a></div>
         </header>
         <input autofocus placeholder="Zur Suche Text hier eingeben">
