add material icons

--- a/assets/index.html
+++ b/assets/index.html
@@ -5,6 +5,7 @@
     <title>Launcher</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="fonts/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="fonts/material/material.css">
 </head>
 <body>
 
